INSTALL_DIR = $(DESTDIR)/$(prefix)/Domain

install-data-local:
	mkdir -p $(INSTALL_DIR)
	mkdir -p $(INSTALL_DIR)/TANGRAM2_FLUID_OBJECTS
	$(INSTALL_DATA) $(srcdir)/TANGRAM2_FLUID_OBJECTS/*.sym $(INSTALL_DIR)/TANGRAM2_FLUID_OBJECTS/
	mkdir -p $(INSTALL_DIR)/TANGRAM2_OBJECTS
	$(INSTALL_DATA) $(srcdir)/TANGRAM2_OBJECTS/*.sym $(INSTALL_DIR)/TANGRAM2_OBJECTS

uninstall-local:
	rm -rf $(INSTALL_DIR)

EXTRA_DIST = TANGRAM2_FLUID_OBJECTS  TANGRAM2_OBJECTS 
