SUBDIRS = CAC_Algorithms          \
          libMatrix               \
          hash_table              \
          animplot                \
          getNames                \
          solver                  \
          avgReward               \
          grammar                 \
          chain_generator         \
          mtx_to_obj              \
          mtx_vis-st_permut       \
          trans_param             \
          descriptors             \
          histogram_mtx_generator \
          pmf                     \
          end_user_needed         \
          mtk

if HAVE_PVM
   SUBDIRS += spmd
endif

EXTRA_DIST = end_user_needed
