bin_PROGRAMS = guerin91 elwalidmitra95

guerin91_SOURCES = admission.cpp connections_list.cpp chained_list.cpp \
                   guerin91.cpp admission.h connections_list.h \
                   chained_list.h
guerin91_CPPFLAGS = -Wall -g -O

elwalidmitra95_SOURCES = elwalidmitra95.cpp \
                         admission.h chained_list.h connections_list.h \
                         admission.cpp chained_list.cpp connections_list.cpp
elwalidmitra95_CPPFLAGS = -Wall -g -O
