bin_PROGRAMS = traffgen_ip traffgen_recv_ip traffmeasures linear calc_loc\
               calc_rem delay_histogram offset rtt_traffgen rtt_traffrec\
               packloss_loc packloss_rem verif_loss adjust_trace shift band row\
               buffer convolution mse check_dup

AM_CPPFLAGS = -Wall -g

check_dup_SOURCES = check_dup.c check_dup.h
traffgen_ip_SOURCES = traffgen_ip.c traffgen_ip.h common.c common.h mcast.c mcast.h
traffgen_recv_ip_SOURCES = traffgen_recv_ip.c traffgen_recv_ip.h common.c common.h mcast.c mcast.h
traffmeasures_SOURCES = traffmeasures.c traffmeasures.h common.c common.h
linear_SOURCES = linear.c linear.h
calc_loc_SOURCES = calc_loc.c calc_loc.h common.c common.h
calc_rem_SOURCES = calc_rem.c calc_rem.h common.c common.h
delay_histogram_SOURCES = delay_histogram.c delay_histogram.h
offset_SOURCES = offset.c offset.h
rtt_traffgen_SOURCES = rtt_traffgen.c rtt_traffgen.h common.c common.h
rtt_traffrec_SOURCES = rtt_traffrec.c rtt_traffrec.h common.c common.h
packloss_loc_SOURCES = packloss_loc.c packloss_loc.h common.c common.h
packloss_rem_SOURCES = packloss_rem.c packloss_rem.h common.c common.h
verif_loss_SOURCES = verif_loss.c verif_loss.h
adjust_trace_SOURCES = adjust_trace.c adjust_trace.h
shift_SOURCES = shift.c shift.h
band_SOURCES = band.c band.h
row_SOURCES = row.c row.h
buffer_SOURCES = buffer.c buffer.h
convolution_SOURCES = convolution.c convolution.h
mse_SOURCES = mse.c mse.h
