SUBDIRS = libTangramMTK      \
          example            \
          floatvalue         \
          intvalue           \
          ghmm               \
          hmm                \
          hmm_batch          \
          hmm_batch_variable \
          ma

EXTRA_DIST = include hmm_common arima_common
